# taskington

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.db
src/taskington/: __init__.py  api.py  main.py
src/taskington/database/: config.py
src/taskington/models/: task.py
src/taskington/routes/: tasks.py
