[project]
name = "taskington"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "goro17", email = "ziscojr+gh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[project.scripts]
taskington = "taskington:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
